[gd_scene load_steps=9 format=3 uid="uid://cqmj0bctttqg"]

[ext_resource type="Script" uid="uid://44jgu17bf8u4" path="res://Menus/UI/QuestLog/quest_popup.gd" id="1_5y55x"]
[ext_resource type="AudioStream" uid="uid://y548wwu2qa6j" path="res://Menus/UI/QuestLog/quest_complete.mp3" id="2_ui3a0"]
[ext_resource type="AudioStream" uid="uid://k72u7x1rx0y5" path="res://Menus/UI/QuestLog/new_quest.mp3" id="3_163i6"]
[ext_resource type="Script" uid="uid://de8eqaxy0vt8t" path="res://utils/scripts/quest_listener.gd" id="4_yhjh5"]

[sub_resource type="LabelSettings" id="LabelSettings_5y55x"]
font_size = 48

[sub_resource type="Animation" id="Animation_rovle"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5d6h6"]
resource_name = "fade"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.833333, 3),
"transitions": PackedFloat32Array(1, 1, 1.5),
"update": 0,
"values": [Color(1, 1, 1, 0.282353), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6i36i"]
_data = {
&"RESET": SubResource("Animation_rovle"),
&"fade": SubResource("Animation_5d6h6")
}

[node name="QuestPopup" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5y55x")

[node name="QName" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.39
anchor_top = 0.029
anchor_right = 0.611
anchor_bottom = 0.133
offset_left = -0.280029
offset_top = 0.208
offset_right = 0.127991
offset_bottom = -0.183998
grow_horizontal = 2
text = "New Quest"
label_settings = SubResource("LabelSettings_5y55x")

[node name="Completed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ui3a0")
bus = &"SFX"

[node name="Started" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_163i6")
bus = &"SFX"

[node name="QuestListener" type="Node" parent="."]
script = ExtResource("4_yhjh5")
metadata/_custom_type_script = "uid://dqkyxgcprq2ih"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6i36i")
}

[connection signal="quest_completed" from="QuestListener" to="." method="_on_quest_listener_quest_completed"]
[connection signal="quest_started" from="QuestListener" to="." method="_on_quest_listener_quest_started"]
